<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.schrenk.blesdremotedroid.BrowseActivity">

    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/action_download"
        android:icon="@mipmap/ic_file_download_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:icon="@mipmap/ic_delete_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/action_upload"
        android:icon="@mipmap/ic_file_upload_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="300"
        android:title="@string/action_select_all"
        android:icon="@mipmap/ic_select_all_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_unselect_all"
        android:orderInCategory="300"
        android:title="@string/action_unselect_all"
        android:icon="@mipmap/ic_clear_white_24dp"
        app:showAsAction="ifRoom"/>
</menu>