<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/file_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:text="@string/dialog_file_size_title"
        android:layout_below="@+id/file_name"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:layout_alignStart="@+id/modified_date"
        android:layout_alignTop="@+id/file_title"
        android:layout_toEndOf="@+id/file_title"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/file_size_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/unit_bytes"
        android:layout_toEndOf="@+id/file_size"
        android:layout_below="@+id/file_name"
        android:textSize="18sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/created_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_created_title"
        android:paddingTop="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:layout_below="@+id/file_title"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/created_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:layout_alignStart="@+id/modified_date"
        android:layout_toEndOf="@+id/created_title"
        android:layout_below="@+id/file_size"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/modified_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_modified_title"
        android:paddingTop="5dp"
        android:paddingBottom="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:layout_below="@+id/created_title"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/modified_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:layout_toEndOf="@+id/modified_title"
        android:layout_below="@+id/created_date"
        android:textSize="18sp"
        android:textStyle="italic"/>

</RelativeLayout>